--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
     <!-- 인적사항 -->
     <div>
         <h2 id="information">1. 정보</h2>
-        <img src="media/phj.jpg" alt="사진" width="376px" height="502px">
+        <img src="https://github.com/202201617/session.io/phj.jpg" alt="사진" width="376px" height="502px">
         <ul type="circle">
             <li>이름: 박혜주</li>
             <li>생년월일: 2003.04.13</li>
@@ -44,13 +44,13 @@
     <!-- 시간표 -->
     <div>
         <h2 id="schedule">2. 2024-1학기 시간표</h2>
-        <img src="media/schedule.png" id = "s" width="309px" height="462px" alt="2024-1학기 시간표">
+        <img src="https://github.com/202201617/session.io/schedule.png" id = "s" width="309px" height="462px" alt="2024-1학기 시간표">
     </div>
 
     <!-- 출몰 지역 -->
     <div>
         <h2 id="appear">3. 출몰 지역</h2>
-        <img id="change_img" src="media/img-m.gif"><br>
+        <img id="change_img" src="https://github.com/202201617/session.io/img-m.gif"><br>
         <div id="buttons">
             <button id="mon">월</button>
             <button id="tue">화</button>
