--- a/resume.html
+++ b/resume.html
@@ -62,6 +62,12 @@
                     <div>
                         <h2 id="schedule">2. 2024-1학기 시간표</h2>
                         <img src="./media/schedule.png" id = "s" width="90%" alt="2024-1학기 시간표">
+                        <p>
+                            &nbsp<br>
+                            &nbsp<br>
+                            &nbsp<br>
+                            &nbsp<br>
+                        </p>
                     </div>
                 </td>
                 <td>
